updated ipynb file Google-Copy1

--- a/Google-Copy1.ipynb
+++ b/Google-Copy1.ipynb
@@ -11945,6 +11945,340 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Restaurant Name</th>\n",
+       "      <th>Inspection Type</th>\n",
+       "      <th>Inspection Date</th>\n",
+       "      <th>Inspection Score</th>\n",
+       "      <th>Street Number</th>\n",
+       "      <th>Street Name</th>\n",
+       "      <th>Street Unit</th>\n",
+       "      <th>Zip</th>\n",
+       "      <th>Street Address</th>\n",
+       "      <th>Inspection Month</th>\n",
+       "      <th>Inspection Year</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Rating Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>A &amp; A MART</td>\n",
+       "      <td>Routine</td>\n",
+       "      <td>5/14/2019</td>\n",
+       "      <td>81</td>\n",
+       "      <td>309</td>\n",
+       "      <td>MARSALIS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>75203</td>\n",
+       "      <td>309 S MARSALIS AVE</td>\n",
+       "      <td>5/1/2019</td>\n",
+       "      <td>FY2019</td>\n",
+       "      <td>32.7445</td>\n",
+       "      <td>-96.816</td>\n",
+       "      <td>Restaurant</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>A &amp; J BAKERY</td>\n",
+       "      <td>Routine</td>\n",
+       "      <td>4/30/2019</td>\n",
+       "      <td>92</td>\n",
+       "      <td>3515</td>\n",
+       "      <td>OAK LAWN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>75219</td>\n",
+       "      <td>3515 OAK LAWN AVE</td>\n",
+       "      <td>4/1/2019</td>\n",
+       "      <td>FY2019</td>\n",
+       "      <td>32.8124</td>\n",
+       "      <td>-96.8054</td>\n",
+       "      <td>Restaurant</td>\n",
+       "      <td>4</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>A &amp; K MART</td>\n",
+       "      <td>Routine</td>\n",
+       "      <td>2/7/2019</td>\n",
+       "      <td>98</td>\n",
+       "      <td>5723</td>\n",
+       "      <td>SINGLETON</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>75212</td>\n",
+       "      <td>5723 SINGLETON BLVD</td>\n",
+       "      <td>2/1/2019</td>\n",
+       "      <td>FY2019</td>\n",
+       "      <td>32.7789</td>\n",
+       "      <td>-96.9141</td>\n",
+       "      <td>Restaurant</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>A MOTIONS FOOD MART</td>\n",
+       "      <td>Routine</td>\n",
+       "      <td>2/22/2018</td>\n",
+       "      <td>80</td>\n",
+       "      <td>829</td>\n",
+       "      <td>CORINTH ST</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>75203</td>\n",
+       "      <td>829 S CORINTH ST RD</td>\n",
+       "      <td>2/1/2018</td>\n",
+       "      <td>FY2018</td>\n",
+       "      <td>32.7395</td>\n",
+       "      <td>-96.7989</td>\n",
+       "      <td>Restaurant</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>A PLUS GROCERY BEER &amp; WINE</td>\n",
+       "      <td>Routine</td>\n",
+       "      <td>2/14/2019</td>\n",
+       "      <td>82</td>\n",
+       "      <td>4407</td>\n",
+       "      <td>MOCKINGBIRD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>75209</td>\n",
+       "      <td>4407 W MOCKINGBIRD LN</td>\n",
+       "      <td>2/1/2019</td>\n",
+       "      <td>FY2019</td>\n",
+       "      <td>32.8369</td>\n",
+       "      <td>-96.8309</td>\n",
+       "      <td>Restaurant</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5102</td>\n",
+       "      <td>ZOE'S KITCHEN</td>\n",
+       "      <td>Routine</td>\n",
+       "      <td>10/21/2019</td>\n",
+       "      <td>90</td>\n",
+       "      <td>8018</td>\n",
+       "      <td>PARK</td>\n",
+       "      <td>#100</td>\n",
+       "      <td>75231</td>\n",
+       "      <td>8018 PARK LN #100</td>\n",
+       "      <td>10/1/2019</td>\n",
+       "      <td>FY2020</td>\n",
+       "      <td>32.8706</td>\n",
+       "      <td>-96.7689</td>\n",
+       "      <td>Bar</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5103</td>\n",
+       "      <td>ZOE'S KITCHEN</td>\n",
+       "      <td>Routine</td>\n",
+       "      <td>9/23/2019</td>\n",
+       "      <td>89</td>\n",
+       "      <td>6025</td>\n",
+       "      <td>ROYAL</td>\n",
+       "      <td>104</td>\n",
+       "      <td>75230</td>\n",
+       "      <td>6025 ROYAL LN STE 104</td>\n",
+       "      <td>9/1/2019</td>\n",
+       "      <td>FY2019</td>\n",
+       "      <td>32.8963</td>\n",
+       "      <td>-96.8035</td>\n",
+       "      <td>Bar</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5104</td>\n",
+       "      <td>ZOE'S KITCHEN</td>\n",
+       "      <td>Routine</td>\n",
+       "      <td>8/14/2019</td>\n",
+       "      <td>94</td>\n",
+       "      <td>5710</td>\n",
+       "      <td>LOVERS</td>\n",
+       "      <td>#108</td>\n",
+       "      <td>75209</td>\n",
+       "      <td>5710 W LOVERS LN #108</td>\n",
+       "      <td>8/1/2019</td>\n",
+       "      <td>FY2019</td>\n",
+       "      <td>32.8507</td>\n",
+       "      <td>-96.8147</td>\n",
+       "      <td>Restaurant</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5105</td>\n",
+       "      <td>ZRG CONCEPTS</td>\n",
+       "      <td>Routine</td>\n",
+       "      <td>9/16/2019</td>\n",
+       "      <td>96</td>\n",
+       "      <td>2505</td>\n",
+       "      <td>FITZHUGH</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>75204</td>\n",
+       "      <td>2505 N FITZHUGH AVE</td>\n",
+       "      <td>9/1/2019</td>\n",
+       "      <td>FY2019</td>\n",
+       "      <td>32.8122</td>\n",
+       "      <td>-96.7838</td>\n",
+       "      <td>Restaurant</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5106</td>\n",
+       "      <td>ZUMBA BY EVA</td>\n",
+       "      <td>Routine</td>\n",
+       "      <td>6/13/2019</td>\n",
+       "      <td>93</td>\n",
+       "      <td>4009</td>\n",
+       "      <td>URBAN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>75227</td>\n",
+       "      <td>4009 URBAN AVE</td>\n",
+       "      <td>6/1/2019</td>\n",
+       "      <td>FY2019</td>\n",
+       "      <td>32.7726</td>\n",
+       "      <td>-96.6968</td>\n",
+       "      <td>Restaurant</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>184</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2850 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Restaurant Name Inspection Type Inspection Date  \\\n",
+       "2                     A & A MART         Routine       5/14/2019   \n",
+       "3                   A & J BAKERY         Routine       4/30/2019   \n",
+       "4                     A & K MART         Routine        2/7/2019   \n",
+       "9            A MOTIONS FOOD MART         Routine       2/22/2018   \n",
+       "10    A PLUS GROCERY BEER & WINE         Routine       2/14/2019   \n",
+       "...                          ...             ...             ...   \n",
+       "5102               ZOE'S KITCHEN         Routine      10/21/2019   \n",
+       "5103               ZOE'S KITCHEN         Routine       9/23/2019   \n",
+       "5104               ZOE'S KITCHEN         Routine       8/14/2019   \n",
+       "5105                ZRG CONCEPTS         Routine       9/16/2019   \n",
+       "5106                ZUMBA BY EVA         Routine       6/13/2019   \n",
+       "\n",
+       "      Inspection Score  Street Number  Street Name Street Unit    Zip  \\\n",
+       "2                   81            309     MARSALIS         NaN  75203   \n",
+       "3                   92           3515     OAK LAWN         NaN  75219   \n",
+       "4                   98           5723    SINGLETON         NaN  75212   \n",
+       "9                   80            829   CORINTH ST         NaN  75203   \n",
+       "10                  82           4407  MOCKINGBIRD         NaN  75209   \n",
+       "...                ...            ...          ...         ...    ...   \n",
+       "5102                90           8018         PARK        #100  75231   \n",
+       "5103                89           6025        ROYAL         104  75230   \n",
+       "5104                94           5710       LOVERS        #108  75209   \n",
+       "5105                96           2505     FITZHUGH         NaN  75204   \n",
+       "5106                93           4009        URBAN         NaN  75227   \n",
+       "\n",
+       "             Street Address Inspection Month Inspection Year      Lat  \\\n",
+       "2        309 S MARSALIS AVE         5/1/2019          FY2019  32.7445   \n",
+       "3         3515 OAK LAWN AVE         4/1/2019          FY2019  32.8124   \n",
+       "4       5723 SINGLETON BLVD         2/1/2019          FY2019  32.7789   \n",
+       "9       829 S CORINTH ST RD         2/1/2018          FY2018  32.7395   \n",
+       "10    4407 W MOCKINGBIRD LN         2/1/2019          FY2019  32.8369   \n",
+       "...                     ...              ...             ...      ...   \n",
+       "5102      8018 PARK LN #100        10/1/2019          FY2020  32.8706   \n",
+       "5103  6025 ROYAL LN STE 104         9/1/2019          FY2019  32.8963   \n",
+       "5104  5710 W LOVERS LN #108         8/1/2019          FY2019  32.8507   \n",
+       "5105    2505 N FITZHUGH AVE         9/1/2019          FY2019  32.8122   \n",
+       "5106         4009 URBAN AVE         6/1/2019          FY2019  32.7726   \n",
+       "\n",
+       "         Long        Type Rating Rating Count  \n",
+       "2     -96.816  Restaurant    3.8          717  \n",
+       "3    -96.8054  Restaurant      4           60  \n",
+       "4    -96.9141  Restaurant    4.3           23  \n",
+       "9    -96.7989  Restaurant                      \n",
+       "10   -96.8309  Restaurant    4.3           44  \n",
+       "...       ...         ...    ...          ...  \n",
+       "5102 -96.7689         Bar    4.1          600  \n",
+       "5103 -96.8035         Bar    4.4          239  \n",
+       "5104 -96.8147  Restaurant    4.3          125  \n",
+       "5105 -96.7838  Restaurant    4.3          723  \n",
+       "5106 -96.6968  Restaurant    4.6          184  \n",
+       "\n",
+       "[2850 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g_lookup_pd_type = g_lookup_pd_filter[g_lookup_pd_filter['Type'].isin(['Restaurant', 'Bar','Cafe']) ]\n",
+    "g_lookup_pd_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g_lookup_pd_filter.to_csv(\"Google Lat Long Results_RestBarCafe.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
