Added section headings

--- a/dallas_restaurant_analysis.ipynb
+++ b/dallas_restaurant_analysis.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import and clean Dallas Open Data"
+    "## Import Dependencies"
    ]
   },
   {
@@ -58,26 +58,52 @@
       "C:\\Users\\KDSharp\\Anaconda3\\lib\\site-packages\\fuzzywuzzy\\fuzz.py:11: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
       "  warnings.warn('Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning')\n"
      ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'config'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-c884eca9d203>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;31m# Google API Key, Yelp API Key\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mconfig\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mgkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mykey\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;31m# Configure gmaps with API key\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'config'"
+     ]
     }
    ],
    "source": [
+    "# Consider grouping dependencies by type\n",
+    "# with a brief explanation regarding use.\n",
+    "\n",
     "# Dependencies\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import requests\n",
     "import json\n",
     "import csv\n",
-    "import gmaps\n",
     "from fuzzywuzzy import fuzz\n",
     "from fuzzywuzzy import process\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy import stats\n",
+    "import plotly.express as px\n",
+    "import datetime\n",
+    "import gmaps\n",
     "\n",
-    "# Google API Key, Yelp API Key, Yelp Client_ID\n",
-    "from config import gkey, ykey, y_clientID \n",
+    "# Google API Key, Yelp API Key\n",
+    "from config import gkey, ykey\n",
     "\n",
     "# Configure gmaps with API key\n",
     "gmaps.configure(api_key=gkey)\n",
     "\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dallas Open Data"
    ]
   },
   {
@@ -219,6 +245,13 @@
     "\n",
     "# write dataframe to the csv\n",
     "#unique_dallas_open_data_pd.to_csv(unique_dallas_open_data_output, sep=',', encoding='utf-8', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Google Data"
    ]
   },
   {
@@ -386,6 +419,13 @@
     "\n",
     "# set output CSV data file filepath variable\n",
     "output_data_filepath = \"output_data/\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Yelp Data"
    ]
   },
   {
@@ -1887,11 +1927,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Analysis"
+   ]
   },
   {
    "cell_type": "code",
