Updated README and Proj Summary in notebook

--- a/dallas-open-data_FINAL.ipynb
+++ b/dallas-open-data_FINAL.ipynb
@@ -1,6 +1,45 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dallas Restaurant Analysis\n",
+    "\n",
+    "### Researcher(s):  \n",
+    "\n",
+    "### Date:  February 1, 2020\n",
+    "\n",
+    "### Source(s):\n",
+    "- [Dallas Open Data - Restaurant and Food Establishment Inspections](https://www.dallasopendata.com/browse?category=City+Services&provenance=official)\n",
+    "- [Google Places API](https://developers.google.com/places/web-service/intro)\n",
+    "- [Yelp Fusion API](https://www.yelp.com/developers/documentation/v3)\n",
+    "\n",
+    "## Summary\n",
+    "#### The purpose of this study...\n",
+    "#### Analysis details (python code) is intentionally viewable.\n",
+    "#### Analysis will provide:\n",
+    "* TBD\n",
+    "* TBD\n",
+    "* TBD\n",
+    "\n",
+    "## Analysis Results Overview\n",
+    "#### Initial Analysis ...:\n",
+    "  - \n",
+    "  - \n",
+    "  - \n",
+    "\n",
+    "#### Differences ....\n",
+    "\n",
+    "*See analysis for details.*\n",
+    "\n",
+    "### Possible next steps...\n",
+    "#### ...."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
