--- a/dallas-restaurant_analysis.ipynb
+++ b/dallas-restaurant_analysis.ipynb
@@ -16,8 +16,7 @@
     "- [Yelp Fusion API](https://www.yelp.com/developers/documentation/v3)\n",
     "\n",
     "## Summary\n",
-    "#### The purpose of this study is to determine if Do restaurants with low health inspection scores tend to receive lower customer ratings in Yelp and Google?\n",
-    "#### Analysis details (python code) is intentionally viewable.\n",
+    "#### The purpose of this study is to determine if restaurants with low health inspection scores tend to receive lower customer ratings in Yelp and Google?\n",
     "\n",
     "### Hypothesis:  If a Dallas restaurant has a poor health inspection score  (<70), that restaurant will also have a low customer rating on Google or Yelp.\n",
     "\n",
